# rack-monitor-rp

./: .gitignore  README.md  config_TEMPLATE.py  logger_handler.py  main.py  pyproject.toml  rack_data.db  run_server.sh  update_sensor.py  update_sensor.sh  uvicorn_log.ini  wol_test.py
models/: __init__.py  rack_stats.py
templates/: index.html
