[tool.poetry]
name = "rack-monitor-rp"
version = "0.1.0"
description = ""
authors = ["Sangjoon Han <jphan32@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
jinja2 = "^3.1.2"
toml = "^0.10.2"
uvicorn = "^0.23.2"
pysqlite3 = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
